--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     <h3>5. Kontaktmöglichkeit</h3>
     <p>Bei Fragen zum Datenschutz können Sie uns gerne kontaktieren:</p>
-    <p>[Hier Ihre Kontakt-E-Mail-Adresse oder Link zu einem Impressum einfügen]</p>
+    <p>cinegizer@gmx.de</p>
     
     <h3>6. Änderung dieser Datenschutzerklärung</h3>
     <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Funktionen. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
